# varvedb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  release-plz.toml
.github/workflows/: ci.yml  deploy-website.yml  fuzz.yml  release-plz.yml
benches/: concurrent_bench.rs  encryption_bench.rs  payload_bench.rs  read_bench.rs  write_bench.rs
book/: book.toml  mermaid-init.js
book/src/: SUMMARY.md  architecture.md  custom.css  example.md  introduction.md  usage.md
examples/: basic.rs  chat.rs  encrypted.rs  quickstart_verified.rs  read_stream.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_fuzz.rs  write_fuzz.rs
issues/: 001-safety-eventview-unsafe.md  002-safety-lmdb-validation.md  003-security-rng-hardening.md  004-security-key-zeroization.md  005-security-zerocopy-docs.md  006-perf-processor-batching.md  007-perf-writer-channel-sharing.md  008-perf-processor-txn-loop.md  009-quality-error-context.md  010-quality-api-writer-clone.md  011-testing-fuzzing.md  012-sidecar-storage.md  012-testing-concurrency.md  013-ops-cicd-audit.md  README.md
scripts/: bump_version.sh  license_check.py  pre-commit.sh  pre-push.sh  release.sh  setup_hooks.sh
src/: constants.rs  crypto.rs  engine.rs  error.rs  lib.rs  log.rs  metrics.rs  model.rs  processor.rs  reader.rs  traits.rs  types.rs  utils.rs  varve.rs  writer.rs
src/storage/: mod.rs
tests/: basic_test.rs  crypto_test.rs  encryption_test.rs  error_test.rs  integration_tests.rs  issue_001_repro.rs  issue_002_validation.rs  issue_006_batching.rs  issue_007_shared_channel.rs  issue_008_txn_reuse.rs  issue_009_error_context.rs  issue_010_writer_clone.rs  issue_011_fuzz_simulation.rs  issue_012_concurrency.rs  metrics_test.rs  persistence_test.rs  processor_test.rs  property_test.proptest-regressions  property_test.rs  security_test.rs  sidecar_test.rs
website/: astro.config.mjs  index.html  package-lock.json  package.json  vite.config.js
website/.astro/: data-store.json  settings.json
website/docs/: index.html
website/issues/: 001_refactor_css.md  002_migrate_to_framework.md  003_adopt_tailwind.md  004_enhance_architecture_diagram.md  005_self_host_fonts.md  006_add_json_ld.md  007_optimize_images.md  008_accessibility_contrast.md  009_copy_encryption.md  010_copy_institutional.md  011_fix_ctas.md  012_style_mdbook.md  013_interactive_playground.md  014_webgl_hero.md  README.md
website/src/: docs.css  docs.js  main.js  style.css
website/src/components/: Search.astro
website/src/content/: config.ts
website/src/content/docs/: architecture.md  concepts.md  introduction.md  performance.md  processor.md  quick_start.md
website/src/content/docs/guides/: concurrency.md  processing.md
website/src/css/components/: buttons.css
website/src/css/layout/: footer.css
website/src/css/sections/: architecture.css  code-window.css  hero.css
website/src/js/: hero-3d.js
website/src/layouts/: BaseLayout.astro  DocsLayout.astro
website/src/pages/: index.astro
website/src/pages/docs/: [...slug].astro
website/src/styles/css/base/: animations.css  reset.css  variables.css
website/src/styles/css/components/: alerts.css  buttons.css  waves.css
(+7 files in other folders)
