[package]
name = "varvedb"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bytemuck = "1.14.3"
bytes = "1.5.0"
heed = "0.20.5"
prometheus = "0.13.3"
rand = "0.8.5"
rkyv = { version = "0.7.44", features = ["validation"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.10.0"
criterion = "0.5.1"
proptest = "1.4.0"

[[bench]]
name = "write_bench"
harness = false

[[bench]]
name = "read_bench"
harness = false

[[bench]]
name = "concurrent_bench"
harness = false

[[bench]]
name = "payload_bench"
harness = false

[[bench]]
name = "encryption_bench"
harness = false
