[package]
name = "varvedb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rkyv = { version = "0.7.44", features = ["validation"] }
tempfile = "3.10.0"
arbitrary = { version = "1.3", features = ["derive"] }
heed = "0.20.5"

[dependencies.varvedb]
path = ".."

[[bin]]
name = "read_fuzz"
path = "fuzz_targets/read_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_fuzz"
path = "fuzz_targets/write_fuzz.rs"
test = false
doc = false
bench = false
